test/index.ts
import wx from '../src'


// error
// wx.checkJsApi({
//     jsApiList: 1
// })


// success
// wx.checkJsApi({
//     jsApiList: ['addCard']
// })
